--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "hyperf/translation": "^2.2",
     "hyperf/validation": "^2.2",
     "palmbuy/hyperf-logstash": "~1.1",
-    "palmbuy/hyperf-request-response-middleware": "~1.2",
+    "palmbuy/hyperf-request-response-middleware": "~1.2"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
