--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "hyperf/snowflake": "^2.2",
     "hyperf/translation": "^2.2",
     "hyperf/validation": "^2.2",
-    "overtrue/wechat": "~5.0",
+    "naixiaoxin/hyperf-wechat": "^1.1",
     "palmbuy/hyperf-logstash": "~1.1",
     "palmbuy/hyperf-request-response-middleware": "~1.2"
   },
